--- a/index.html
+++ b/index.html
@@ -1,32 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>[Project Name] Project Timeline</title>
+	<title>[Cabsingh] Linea temporal del proyecto</title>
 	<meta name="viewport" content="width=device-width" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
 </head>
 <body>
-	<h1>[Project Name] Project Timeline</h1>
+	<h1>[Cabsingh] Linea temporal del proyecto</h1>
 	<ol class="timeline">
 		<li class="tl-node">
-			<div class="tl-stamp">August 14th, 2013</div>
-			<div class="tl-content">Kickoff Meeting</div>
-			<a href="#">View notes</a>
+			<div class="tl-stamp">5 de Enero de 2016</div>
+			<div class="tl-content">Elaboración del Brief de Objetivos y levantamiento de información</div>
+			<a href="https://docs.google.com/document/d/1eUdpMsTCNhV1-En4S4xOHD1dV2iCDuERLssrWkOTTJ8/edit?usp=sharing">Ver Brief de Objetivos</a>
 		</li>
 		<li class="tl-node">
-			<div class="tl-stamp">August 9th, 2013</div>
-			<div class="tl-content">Sign contract</div>
-			<a href="#">View contract</a>
-		</li>
-		<li class="tl-node">
-			<div class="tl-stamp">August 7th, 2013</div>
-			<div class="tl-content">Initial meeting</div>
-			<a href="#">Meeting Notes</a>
-		</li>
-		<li class="tl-node">
-			<div class="tl-stamp">July 13th, 2013</div>
-			<div class="tl-content">Initial contact</div>
+			<div class="tl-stamp">5 de Enero de 2016</div>
+			<div class="tl-content">Junta Inicial</div>
 		</li>
 	</ol>
 </body>
